...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExhibitDirectionsActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/direction_display"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="20dp"
        android:layout_width="0dp"
        android:layout_height="580dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_exhibit_direction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/skip_exhibit_direction_btn" />

    <Button
        android:id="@+id/back_exhibit_direction_btn"
        android:layout_width="wrap_content"
...
